@@ -1,6 +1,6 @@
 // TortoiseMerge - a Diff/Patch program
 
-// Copyright (C) 2003-2014 - TortoiseSVN
+// Copyright (C) 2003-2015 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -380,6 +380,7 @@ protected:  // methods
     int             GetCharWidth();
     int             GetMaxLineLength();
     int             GetLineLength(int index);
+    int             GetLineLengthWithTabsConverted(int index);
     int             GetViewLineLength(int index) const;
     int             GetScreenChars();
     int             GetAllMinScreenChars() const;
